--- a/app/components/wm-skelton/wm-skelton_template.html
+++ b/app/components/wm-skelton/wm-skelton_template.html
@@ -105,7 +105,7 @@ Distributed under the MIT License (license terms are at http://opensource.org/li
        * @required No
        * @param elems {Array} (e.g. elems=[elemA, elemB, ...] (elemA, elemB must be DOM)) 
        */
-      setIgnoreDragging: function([elems]){
+      setIgnoreDragging: function(elems){
       },
       /**
        * Be called during preparing Custom Element Node.
