Updated skelton_template Updated line color & moved size control slider into contropanel on wm-oscilloscope

--- a/app/components/wm-skelton/wm-skelton_template.html
+++ b/app/components/wm-skelton/wm-skelton_template.html
@@ -31,7 +31,7 @@ Distributed under the MIT License (license terms are at http://opensource.org/li
        */
       hello: function() {
           this.super();
-      }
+      },
       /**
        * Be called during preparing Custom Element Node.
        * Retun desired size of Custom Element Node in object format.|||
@@ -105,7 +105,7 @@ Distributed under the MIT License (license terms are at http://opensource.org/li
        * @required No
        * @param elems {Array} (e.g. elems=[elemA, elemB, ...] (elemA, elemB must be DOM)) 
        */
-      setIgnoreDragging: function([elems]){
+      setIgnoreDragging: function(elems){
       },
       /**
        * Be called during preparing Custom Element Node.
