--- a/app/components/wm-3eqvolpan/wm-3eqvolpan.html
+++ b/app/components/wm-3eqvolpan/wm-3eqvolpan.html
@@ -5,7 +5,7 @@ Distributed under the MIT License (license terms are at http://opensource.org/li
 <link rel="import" href="../wm-platform/wm-resourcemanager.html">
 <!-script type="text/javascript" src="wm-platform/pointerevents.js"></script--> 
 <polymer-element name="wm-3eqvolpan" extends="wm-resourcemanager" attributes="">
-  <link rel="import" href="../webaudio-controls/controls.html">
+  <link rel="import" href="../../../bower_components/webaudio-controls/webaudio-controls.html">
   <template>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/elements.css">
@@ -25,15 +25,15 @@ Distributed under the MIT License (license terms are at http://opensource.org/li
     </style>
     <div class="outerline">
       <div style="padding:5px 0px;">
-        <webaudio-knob id="pan" src="../webaudio-controls/images/flatknob_red.png" sprites="30" value="0" min="-1" max="1" step="0.1" diameter="40"></webaudio-knob>
+        <webaudio-knob id="pan" src="../../../bower_components/webaudio-controls/img/flatknob_red.png" sprites="30" value="0" min="-1" max="1" step="0.1" diameter="40"></webaudio-knob>
       </div>
       <div style="padding-bottom:10px;">
-        <webaudio-knob id="eqknobh" src="../webaudio-controls/images/flatknob_dpurple.png" sprites="30" value="0" min="-15" max="15" step="1" diameter="40"></webaudio-knob>
-        <webaudio-knob id="eqknobm" src="../webaudio-controls/images/flatknob_dpurple.png" sprites="30" value="0" min="-15" max="15" step="1" diameter="40"></webaudio-knob>
-        <webaudio-knob id="eqknobl" src="../webaudio-controls/images/flatknob_dpurple.png" sprites="30" value="0" min="-15" max="15" step="1" diameter="40"></webaudio-knob>
+        <webaudio-knob id="eqknobh" src="../../../bower_components/webaudio-controls/img/flatknob_dpurple.png" sprites="30" value="0" min="-15" max="15" step="1" diameter="40"></webaudio-knob>
+        <webaudio-knob id="eqknobm" src="../../../bower_components/webaudio-controls/img/flatknob_dpurple.png" sprites="30" value="0" min="-15" max="15" step="1" diameter="40"></webaudio-knob>
+        <webaudio-knob id="eqknobl" src="../../../bower_components/webaudio-controls/img/flatknob_dpurple.png" sprites="30" value="0" min="-15" max="15" step="1" diameter="40"></webaudio-knob>
       </div>
       <div style="position:relative; left:8px; top:5px; padding-bottom:30px;">
-        <webaudio-slider id="gainslider" src="../components/webaudio-controls/images/fsliderbody.png" knobsrc="components/webaudio-controls/images/fsliderknob.png" value="80" min="0" max="200" step="1" basewidth="24" baseheight="36" knobwidth="24" knobheight="24" ditchlength="100" tooltip="" defvalue="0" height="128" width="24"></webaudio-slider>
+        <webaudio-slider id="gainslider" src="../../../bower_components/webaudio-controls/img/fsliderbody.png" knobsrc="../../../bower_components//webaudio-controls/img/fsliderknob.png" value="80" min="0" max="200" step="1" basewidth="24" baseheight="36" knobwidth="24" knobheight="24" ditchlength="100" tooltip="" defvalue="0" height="128" width="24"></webaudio-slider>
       </div>
     </div>
   </template>
